--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   },
   "collective": {
     "type": "opencollective",
-    "url": "https://opencollective.com/vis",
+    "url": "https://opencollective.com/visjs",
     "logo": "https://opencollective.com/opencollective/logo.txt"
   }
 }
