fix(build): use common header and Babel preset
See visjs/vis-dev-utils#5.

As in other projects has already been done:
- There should be no more prototype polution.
- Uglify was replaced by Terser (Uglify was removing the header).
- The build in banner was used instead of the plugin (the plugin was
messing up source maps which now work).
- Some unused dependencies were removed.

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-  "presets": [
-      ["@babel/preset-env", {
-          "targets": "> 0.1% or not dead"
-      }]
-  ]
+  "exclude": ["**/node_modules/**"],
+  "presets": ["vis-dev-utils/babel-preset"]
 }
