--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   ],
   "files": ["**/*"],
   "scripts": {
-    "test": "mocha --exit --require @babel/register",
-    "test-cov": "nyc --reporter=lcov mocha --exit --require @babel/register",
+    "test": "BABEL_ENV=test mocha --exit --require @babel/register",
+    "test-cov": "BABEL_ENV=test-cov nyc --reporter=lcov mocha --exit --require @babel/register",
     "js:graph3d": "rollup --config rollup.config.js",
     "build": "npm run js:graph3d",
     "watch": "rollup --watch --config rollup.config.js",
@@ -61,36 +61,34 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
+    "@babel/runtime-corejs3": "^7.7.7",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
-    "clean-css": "^4.2.1",
-    "concat-glob-cli": "^0.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "eslint": "^6.1.0",
     "git-authors-cli": "^1.0.18",
     "husky": "^3.0.4",
-    "jsdoc": "^3.6.3",
     "jsdom": "15.2.0",
     "jsdom-global": "^3.0.2",
     "lint-staged": "^9.2.3",
-    "merge-stream": "^2.0.0",
     "mocha": "^6.2.0",
     "nyc": "^15.0.0",
     "opencollective": "^1.0.3",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-banner": "^0.2.1",
     "rollup-plugin-commonjs": "^10.0.2",
-    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-plugin-terser": "^5.1.3",
     "semantic-release": "^15.13.21",
     "sinon": "^8.0.0",
     "test-console": "^1.1.0",
-    "vis-dev-utils": "^1.0.0"
+    "vis-dev-utils": "^1.2.0"
   },
   "collective": {
     "type": "opencollective",
