feat(build): use common build process
https://github.com/visjs/vis-util/pull/144

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,10 @@ jobs:
           root: ..
           paths:
             - "repo/dist"
+            - "repo/esnext"
+            - "repo/peer"
+            - "repo/standalone"
+            - "repo/styles"
 
   lint:
     executor: node
