--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "vis-graph3d",
   "version": "0.0.0-no-version",
   "description": "Create interactive, animated 3d graphs. Surfaces, lines, dots and block styling out of the box.",
-  "main": "dist/vis-graph3d.min.js",
-  "module": "dist/esm.js",
+  "browser": "peer/umd/vis-graph3d.min.js",
+  "jsnext": "esnext/esm/vis-graph3d.js",
+  "main": "peer/umd/vis-graph3d.js",
+  "module": "peer/esm/vis-graph3d.js",
+  "types": "declarations/index.d.ts",
   "homepage": "https://visjs.github.io/vis-graph3d/",
   "license": "(Apache-2.0 OR MIT)",
   "repository": {
@@ -27,11 +30,18 @@
     "graph",
     "browser"
   ],
-  "files": ["**/*"],
+  "files": [
+    "declarations",
+    "dist",
+    "esnext",
+    "peer",
+    "standalone",
+    "styles"
+  ],
   "scripts": {
-    "test": "BABEL_ENV=test mocha --exit --require @babel/register",
-    "test-cov": "BABEL_ENV=test-cov nyc --reporter=lcov mocha --exit --require @babel/register",
-    "js:graph3d": "rollup --config rollup.config.js",
+    "test": "BABEL_ENV=test mocha --exit --require vis-dev-utils/babel-register",
+    "test-cov": "BABEL_ENV=test-cov nyc --reporter=lcov mocha --exit --require vis-dev-utils/babel-register",
+    "js:graph3d": "rollup --config rollup.build.js && rollup --config rollup.config.js",
     "build": "npm run js:graph3d",
     "watch": "rollup --watch --config rollup.config.js",
     "watch-dev": "npm run watch-dev",
@@ -48,44 +58,64 @@
       "pre-push": "npm test"
     }
   },
-  "dependencies": {
-    "emitter-component": "1.1.1",
-    "hammerjs": "2.0.8",
-    "keycharm": "0.3.1",
-    "moment": "2.24.0",
-    "propagating-hammerjs": "1.4.7",
-    "timsort": "0.3.0",
-    "vis-data": "6.4.1",
-    "vis-util": "3.0.0"
+  "peerDependencies": {
+    "component-emitter": "^1.3.0",
+    "hammerjs": "^2.0.0",
+    "keycharm": "^0.2.0",
+    "moment": "^2.24.0",
+    "propagating-hammerjs": "^1.4.0",
+    "vis-data": "^6.2.0",
+    "vis-util": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-transform-runtime": "7.8.3",
     "@babel/preset-env": "7.8.7",
+    "@babel/preset-typescript": "7.8.3",
     "@babel/register": "7.8.6",
     "@babel/runtime-corejs3": "7.8.7",
+    "@commitlint/cli": "8.1.0",
+    "@commitlint/config-conventional": "8.1.0",
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-json": "4.0.2",
+    "@rollup/plugin-node-resolve": "7.1.1",
+    "@rollup/plugin-strip": "1.3.2",
+    "babel-plugin-css-modules-transform": "1.6.2",
     "babel-plugin-istanbul": "6.0.0",
+    "component-emitter": "1.3.0",
+    "core-js": "3.6.4",
     "eslint": "6.8.0",
     "git-authors-cli": "1.0.23",
+    "hammerjs": "2.0.8",
     "husky": "4.2.3",
     "jsdom": "16.2.0",
     "jsdom-global": "3.0.2",
+    "keycharm": "0.3.1",
     "lint-staged": "10.0.8",
     "mocha": "7.1.0",
+    "moment": "2.24.0",
     "nyc": "15.0.0",
     "opencollective": "1.0.3",
+    "postcss-assets": "5.0.0",
     "prettier": "1.19.1",
+    "propagating-hammerjs": "1.4.7",
     "rimraf": "3.0.2",
     "rollup": "2.0.2",
+    "rollup-plugin-analyzer": "3.2.2",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-copy": "3.3.0",
     "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-postcss": "2.0.6",
     "rollup-plugin-terser": "5.2.0",
+    "rollup-plugin-typescript2": "0.25.3",
     "semantic-release": "17.0.4",
     "sinon": "9.0.0",
     "test-console": "1.1.0",
-    "vis-dev-utils": "2.1.0"
+    "vis-data": "6.5.0",
+    "vis-dev-utils": "2.2.3",
+    "vis-util": "4.0.0"
   },
   "collective": {
     "type": "opencollective",
