test: add pinning test to check files in package

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,6 +162,7 @@ workflows:
       - test:
           requires:
             - prepare
+            - build
 
       - gh_pages:
           requires:
