test: add pinning test to check files in package (#210)

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "rollup-plugin-typescript2": "0.27.1",
     "semantic-release": "17.0.8",
     "sinon": "9.0.2",
+    "snap-shot-it": "7.9.3",
     "test-console": "1.1.0",
     "uuid": "8.1.0",
     "vis-data": "6.5.3",
