--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,6 +150,7 @@ workflows:
       - test:
           requires:
             - prepare
+            - build
 
       - gh_pages:
           requires:
