--- a/package.json
+++ b/package.json
@@ -59,19 +59,18 @@
     }
   },
   "peerDependencies": {
+    "@egjs/hammerjs": "^2.0.0",
     "component-emitter": "^1.3.0",
-    "hammerjs": "^2.0.0",
     "keycharm": "^0.2.0 || ^0.3.0 || ^0.4.0",
-    "propagating-hammerjs": "^1.4.0 || ^2.0.0",
     "uuid": "^7.0.0 || ^8.0.0",
     "vis-data": "^7.0.0",
-    "vis-util": "^3.0.0 || ^4.0.0"
+    "vis-util": "^5.0.1"
   },
   "devDependencies": {
+    "@egjs/hammerjs": "2.0.17",
     "component-emitter": "1.3.0",
     "eslint": "7.21.0",
     "git-authors-cli": "1.0.33",
-    "hammerjs": "2.0.8",
     "husky": "4.3.8",
     "jsdom": "16.4.0",
     "jsdom-global": "3.0.2",
@@ -81,7 +80,6 @@
     "nyc": "15.1.0",
     "opencollective": "1.0.3",
     "prettier": "2.2.1",
-    "propagating-hammerjs": "2.0.1",
     "rimraf": "3.0.2",
     "rollup": "2.40.0",
     "rollup-plugin-babel": "4.4.0",
@@ -95,7 +93,7 @@
     "uuid": "8.3.2",
     "vis-data": "7.1.2",
     "vis-dev-utils": "2.9.33",
-    "vis-util": "4.3.4"
+    "vis-util": "5.0.1"
   },
   "collective": {
     "type": "opencollective",
