--- a/package.json
+++ b/package.json
@@ -51,13 +51,8 @@
     "clean": "rimraf 'dist/*'",
     "postinstall": "opencollective postinstall || exit 0",
     "prepublishOnly": "npm run contributors:update && npm run build",
-    "contributors:update": "git-authors-cli"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm test"
-    }
+    "contributors:update": "git-authors-cli",
+    "prepare": "husky install"
   },
   "peerDependencies": {
     "@egjs/hammerjs": "^2.0.0",
@@ -73,7 +68,7 @@
     "component-emitter": "1.3.0",
     "eslint": "7.32.0",
     "git-authors-cli": "1.0.37",
-    "husky": "4.3.8",
+    "husky": "7.0.4",
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
     "keycharm": "0.4.0",
