--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "watch": "rollup --watch --config rollup.config.js",
     "watch-dev": "npm run watch-dev",
     "generate-examples-index": "generate-examples-index --config generate-examples-index.json",
-    "lint": "eslint '{src,test}/**/*.{m,}{j,t}s{x,}'",
-    "clean": "rimraf 'dist/*'",
+    "style": "prettier --check .",
+    "style-fix": "prettier --write .",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
+    "clean": "rimraf '{dist,esnext,peer,standalone}/*'",
     "postinstall": "opencollective postinstall || exit 0",
     "prepublishOnly": "npm run contributors:update && npm run build",
     "contributors:update": "git-authors-cli",
@@ -66,7 +69,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.17.3",
     "@egjs/hammerjs": "2.0.17",
     "component-emitter": "1.3.0",
-    "eslint": "7.32.0",
+    "eslint": "8.11.0",
     "git-authors-cli": "1.0.37",
     "husky": "7.0.4",
     "jsdom": "19.0.0",
@@ -86,7 +89,7 @@
     "test-console": "2.0.0",
     "uuid": "8.3.2",
     "vis-data": "7.1.2",
-    "vis-dev-utils": "3.0.0",
+    "vis-dev-utils": "3.0.8",
     "vis-util": "5.0.2"
   },
   "collective": {
